# aruco_ros

./: .gitignore
aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/src/: single_reference.cpp
