<?xml version="1.0"?>
<package format="2">
  <name>aruco_ros</name>
  <version>3.0.3</version>
  <description>
    The ARUCO Library has been developed by the Ava group of the Univeristy of Cordoba(Spain).
    It provides real-time marker based 3D pose estimation using AR markers.
  </description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <license>MIT</license>
  <url type="website">http://www.uco.es/investiga/grupos/ava/node/26</url>
  <author email="rmsalinas@uco.es">Rafael Muñoz Salinas</author>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
